Fixes page jump on error msg display

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
 /* Hide elements for accessibility */
 .sr-only {
   clip: rect(1px, 1px, 1px, 1px);
+  -webkit-clip-path: inset(50%);
   clip-path: inset(50%);
   height: 1px;
   width: 1px;
@@ -31,27 +32,25 @@ body {
   max-width: 1680px;
   min-height: 100vh;
   margin: 0 auto;
-  background: linear-gradient(
-135deg
-, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+  background: linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   .site-wrapper {
     background: none;
     background-image: url(../assets/images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
-  } 
+  }
 }
 
-@media (min-width: 1681px){
+@media (min-width: 1681px) {
   .site-wrapper {
     max-width: 1920px;
   }
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   main {
     display: flex;
     justify-content: space-between;
@@ -75,14 +74,14 @@ body {
   padding: 0 2rem;
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   .bounded-container {
     padding-left: 4rem;
     padding-right: 1.5rem;
   }
 }
 
-@media (min-width: 1200px){
+@media (min-width: 1200px) {
   .bounded-container {
     padding-left: 14rem;
     padding-right: 1.5rem;
@@ -112,13 +111,13 @@ body {
 
 .img-container-mobile {
   background-image: url(../assets/images/hero-mobile.jpg);
-  background-size:cover;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-  height: 300px;  
+  height: 300px;
 }
 
-@media(min-width: 900px){
+@media (min-width: 900px) {
   .img-container-mobile {
     display: none;
   }
@@ -131,15 +130,16 @@ body {
   margin: 4rem auto 0 auto;
 }
 
-@media(min-width:900px){
+@media (min-width: 900px) {
   .content-wrapper {
     text-align: left;
     max-width: 550px;
+    height: 435px;
     margin: 6.5rem 0 0 0;
   }
 }
 
-@media (min-width: 1681px){
+@media (min-width: 1681px) {
   .content-wrapper {
     max-width: 635px;
   }
@@ -155,13 +155,13 @@ h2 {
   margin-bottom: 1.25rem;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   h2 {
     font-size: 3rem;
   }
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   h2 {
     font-size: 4rem;
     letter-spacing: 14px;
@@ -169,21 +169,21 @@ h2 {
 }
 
 h2 span {
-  color:var(--color-secondary);
+  color: var(--color-secondary);
   font-weight: 300;
 }
 
 h3 {
   color: var(--color-secondary);
   font-weight: 400;
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1.85;
   margin-bottom: 2rem;
 }
 
-@media(min-width: 900px){
+@media (min-width: 900px) {
   h3 {
-    font-size: .975rem;
+    font-size: 0.975rem;
     width: 400px;
   }
 }
@@ -192,7 +192,7 @@ h3 {
   display: none;
 }
 
-@media(min-width: 900px){
+@media (min-width: 900px) {
   .img-container-desktop {
     display: block;
     background-image: url(../assets/images/hero-desktop.jpg);
@@ -208,7 +208,7 @@ form {
   position: relative;
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   form {
     width: 400px;
   }
@@ -216,35 +216,54 @@ form {
 
 .input-container {
   position: relative;
-  /* background: aqua; */
   width: 100%;
 }
 
-input[type=email] {
+input[type='email'] {
   border: 1.5px solid rgb(214, 196, 196);
   border-radius: 24px;
   padding: 1rem 2rem;
   width: 100%;
   background: none;
   font-family: var(--main-font);
-  font-size: .875rem;
+  font-size: 0.875rem;
 }
 
-@media (min-width: 900px){
-  input[type=email] {
+@media (min-width: 900px) {
+  input[type='email'] {
     font-size: 1rem;
   }
 }
 
-input[type=email]:focus {
+input[type='email']:focus {
   outline: none;
   border: 1.5px solid var(--color-primary);
   box-shadow: 0px 0px 4px var(--color-primary);
 }
 
+input::-webkit-input-placeholder {
+  color: var(--color-secondary);
+  opacity: 0.5;
+}
+
+input::-moz-placeholder {
+  color: var(--color-secondary);
+  opacity: 0.5;
+}
+
+input:-ms-input-placeholder {
+  color: var(--color-secondary);
+  opacity: 0.5;
+}
+
+input::-ms-input-placeholder {
+  color: var(--color-secondary);
+  opacity: 0.5;
+}
+
 input::placeholder {
   color: var(--color-secondary);
-  opacity: .5;
+  opacity: 0.5;
 }
 
 input::after {
@@ -262,7 +281,7 @@ input::after {
   bottom: 2px;
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   #error-icon {
     bottom: 4px;
   }
@@ -279,7 +298,7 @@ input::after {
   background: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
 }
 
-@media (min-width: 900px){
+@media (min-width: 900px) {
   #submit-btn {
     bottom: 9px;
     padding: 1.25rem 2.75rem;
@@ -297,11 +316,10 @@ input::after {
 }
 
 #submit-msg {
-  font-size: .875rem;
+  font-size: 0.875rem;
   text-align: center;
   margin-top: 0.875rem;
   color: var(--color-primary);
-  display: none;
 }
 
 /* Footer */
@@ -310,11 +328,11 @@ footer {
 }
 
 .fm-attribution-row {
-  padding-bottom: 1.5rem
+  padding-bottom: 1.5rem;
 }
 
 .fm-attribution {
-  font-size: .75rem;
+  font-size: 0.75rem;
   line-height: 1.5;
   color: var(--color-neutral);
 }
